--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,8 @@
 </head>
 <body>
   <div id="root"></div>
+
+
+  <script src="https://kit.fontawesome.com/135877c70c.js" crossorigin="anonymous"></script>
 </body>
 </html>
